fix table overflow

--- a/kogatana-x.css
+++ b/kogatana-x.css
@@ -205,6 +205,7 @@ time {
     margin: 1em auto;
     text-align: center;
     margin-left: 3vw;
+    overflow-x: auto; 
 }
 
 .content table th {
